# Lib_A

./: Adder.cpp  Adder.h  CMakeLists.txt  Lib_A.sln  README.md
Debug/: Lib_A.ilk
Lib_A/: Lib_A.vcxproj  Lib_A.vcxproj.filters
Lib_A/Debug/: Lib_A.exe.recipe  vc142.idb
Lib_A/Debug/Lib_A.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib_A.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
